# cdel

./: .gitignore  DESIGN.md  EVALUATION.md  IMPLEMENTATION.md  PROJECT_OVERVIEW.md  README.md  build.sh  run.sh  runeverything.sh  stopeverything.sh  testcases
pass/: CMakeLists.txt
pass/include/: CFGAnalyzer.h  CallGraphAnalyzer.h  CostModel.h  LoopAnalyzer.h  WeightedFreqPass.h
pass/ir_files/: arith.ll  functions.ll  loops.ll  test1.ll  test10.ll  test100.ll  test101.ll  test102.ll  test103.ll  test104.ll  test105.ll  test106.ll  test107.ll  test108.ll  test109.ll  test11.ll  test110.ll  test12.ll  test13.ll  test14.ll  test15.ll  test16.ll  test17.ll  test18.ll  test19.ll  test2.ll  test20.ll  test21.ll  test22.ll  test23.ll  test24.ll  test25.ll  test26.ll  test27.ll  test28.ll  test29.ll  test3.ll  test30.ll  test31.ll  test32.ll  (+73 more)
pass/output/: analysis_report.csv  analysis_report.json  summary.json
pass/output/per_test/: arith.csv  arith.json  functions.csv  functions.json  test1.csv  test1.json  test10.csv  test10.json  test100.csv  test100.json  test101.csv  test101.json  test102.csv  test102.json  (+210 more)
pass/test/: arith.c  test10.cpp  test100.cpp  test106.cpp  test107.cpp  test108.c  test109.cpp  test13.c  test15.c  test18.cpp  test19.cpp  test20.cpp  test25.c  test26.cpp  test27.c  test28.cpp  test30.c  test35.cpp  test37.cpp  test4.c  test40.cpp  test41.cpp  test42.c  test44.cpp  test45.c  test47.cpp  test48.c  test5.cpp  test52.cpp  test55.cpp  test57.c  test59.cpp  test61.cpp  test62.cpp  test63.c  test64.cpp  test66.c  test69.c  test70.cpp  test71.cpp  (+17 more)
(+93 files in other folders)
